--- a/jupyter_notebooks/01-DataCollection.ipynb
+++ b/jupyter_notebooks/01-DataCollection.ipynb
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 1,
       "metadata": {
         "id": "wZfF_j-Bz3i4",
         "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
@@ -85,10 +85,10 @@
         {
           "data": {
             "text/plain": [
-              "'/workspaces/milestone-project-heritage-housing-issues'"
+              "'d:\\\\Projects\\\\milestone-project-heritage-housing-issues\\\\jupyter_notebooks'"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 2,
       "metadata": {
         "id": "TwHsQRWjz3i9",
         "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 3,
       "metadata": {
         "id": "vz3S-_kjz3jA",
         "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
@@ -151,10 +151,10 @@
         {
           "data": {
             "text/plain": [
-              "'/workspaces'"
+              "'d:\\\\Projects\\\\milestone-project-heritage-housing-issues'"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -182,28 +182,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: kaggle in /home/cistudent/.local/lib/python3.12/site-packages (1.7.4.5)\n",
-            "Requirement already satisfied: bleach in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (6.2.0)\n",
-            "Requirement already satisfied: certifi>=14.05.14 in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (2024.12.14)\n",
-            "Requirement already satisfied: charset-normalizer in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (3.4.0)\n",
-            "Requirement already satisfied: idna in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (3.10)\n",
-            "Requirement already satisfied: protobuf in /home/cistudent/.local/lib/python3.12/site-packages (from kaggle) (5.29.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.5.3 in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (2.9.0.post0)\n",
-            "Requirement already satisfied: python-slugify in /home/cistudent/.local/lib/python3.12/site-packages (from kaggle) (8.0.4)\n",
-            "Requirement already satisfied: requests in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (2.32.3)\n",
-            "Requirement already satisfied: setuptools>=21.0.0 in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (75.6.0)\n",
-            "Requirement already satisfied: six>=1.10 in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (1.17.0)\n",
-            "Requirement already satisfied: text-unidecode in /home/cistudent/.local/lib/python3.12/site-packages (from kaggle) (1.3)\n",
-            "Requirement already satisfied: tqdm in /home/cistudent/.local/lib/python3.12/site-packages (from kaggle) (4.67.1)\n",
-            "Requirement already satisfied: urllib3>=1.15.1 in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (2.2.3)\n",
-            "Requirement already satisfied: webencodings in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (0.5.1)\n",
+            "Collecting kaggle\n",
+            "  Using cached kaggle-1.7.4.5-py3-none-any.whl.metadata (16 kB)\n",
+            "Collecting bleach (from kaggle)\n",
+            "  Using cached bleach-6.2.0-py3-none-any.whl.metadata (30 kB)\n",
+            "Requirement already satisfied: certifi>=14.05.14 in d:\\projects\\milestone-project-heritage-housing-issues\\.venv\\lib\\site-packages (from kaggle) (2025.8.3)\n",
+            "Requirement already satisfied: charset-normalizer in d:\\projects\\milestone-project-heritage-housing-issues\\.venv\\lib\\site-packages (from kaggle) (3.4.2)\n",
+            "Requirement already satisfied: idna in d:\\projects\\milestone-project-heritage-housing-issues\\.venv\\lib\\site-packages (from kaggle) (3.10)\n",
+            "Requirement already satisfied: protobuf in d:\\projects\\milestone-project-heritage-housing-issues\\.venv\\lib\\site-packages (from kaggle) (5.29.5)\n",
+            "Requirement already satisfied: python-dateutil>=2.5.3 in d:\\projects\\milestone-project-heritage-housing-issues\\.venv\\lib\\site-packages (from kaggle) (2.9.0.post0)\n",
+            "Collecting python-slugify (from kaggle)\n",
+            "  Using cached python_slugify-8.0.4-py2.py3-none-any.whl.metadata (8.5 kB)\n",
+            "Requirement already satisfied: requests in d:\\projects\\milestone-project-heritage-housing-issues\\.venv\\lib\\site-packages (from kaggle) (2.32.4)\n",
+            "Collecting setuptools>=21.0.0 (from kaggle)\n",
+            "  Using cached setuptools-80.9.0-py3-none-any.whl.metadata (6.6 kB)\n",
+            "Requirement already satisfied: six>=1.10 in d:\\projects\\milestone-project-heritage-housing-issues\\.venv\\lib\\site-packages (from kaggle) (1.17.0)\n",
+            "Collecting text-unidecode (from kaggle)\n",
+            "  Using cached text_unidecode-1.3-py2.py3-none-any.whl.metadata (2.4 kB)\n",
+            "Requirement already satisfied: tqdm in d:\\projects\\milestone-project-heritage-housing-issues\\.venv\\lib\\site-packages (from kaggle) (4.67.1)\n",
+            "Requirement already satisfied: urllib3>=1.15.1 in d:\\projects\\milestone-project-heritage-housing-issues\\.venv\\lib\\site-packages (from kaggle) (2.5.0)\n",
+            "Collecting webencodings (from kaggle)\n",
+            "  Using cached webencodings-0.5.1-py2.py3-none-any.whl.metadata (2.1 kB)\n",
+            "Requirement already satisfied: colorama in d:\\projects\\milestone-project-heritage-housing-issues\\.venv\\lib\\site-packages (from tqdm->kaggle) (0.4.6)\n",
+            "Using cached kaggle-1.7.4.5-py3-none-any.whl (181 kB)\n",
+            "Using cached setuptools-80.9.0-py3-none-any.whl (1.2 MB)\n",
+            "Using cached bleach-6.2.0-py3-none-any.whl (163 kB)\n",
+            "Using cached python_slugify-8.0.4-py2.py3-none-any.whl (10 kB)\n",
+            "Using cached text_unidecode-1.3-py2.py3-none-any.whl (78 kB)\n",
+            "Using cached webencodings-0.5.1-py2.py3-none-any.whl (11 kB)\n",
+            "Installing collected packages: webencodings, text-unidecode, setuptools, python-slugify, bleach, kaggle\n",
+            "\n",
+            "   ------------- -------------------------- 2/6 [setuptools]\n",
+            "   ------------- -------------------------- 2/6 [setuptools]\n",
+            "   ------------- -------------------------- 2/6 [setuptools]\n",
+            "   -------------------- ------------------- 3/6 [python-slugify]\n",
+            "   --------------------------------- ------ 5/6 [kaggle]\n",
+            "   ---------------------------------------- 6/6 [kaggle]\n",
+            "\n",
+            "Successfully installed bleach-6.2.0 kaggle-1.7.4.5 python-slugify-8.0.4 setuptools-80.9.0 text-unidecode-1.3 webencodings-0.5.1\n",
             "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         }
@@ -222,14 +245,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
+          "name": "stderr",
           "output_type": "stream",
           "text": [
-            "chmod: cannot access 'kaggle.json': No such file or directory\n"
+            "'chmod' is not recognized as an internal or external command,\n",
+            "operable program or batch file.\n"
           ]
         }
       ],
@@ -248,24 +272,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
+          "name": "stderr",
           "output_type": "stream",
           "text": [
             "Traceback (most recent call last):\n",
-            "  File \"/home/cistudent/.local/bin/kaggle\", line 8, in <module>\n",
-            "    sys.exit(main())\n",
-            "             ^^^^^^\n",
-            "  File \"/home/cistudent/.local/lib/python3.12/site-packages/kaggle/cli.py\", line 68, in main\n",
+            "  File \"<frozen runpy>\", line 198, in _run_module_as_main\n",
+            "  File \"<frozen runpy>\", line 88, in _run_code\n",
+            "  File \"d:\\Projects\\milestone-project-heritage-housing-issues\\.venv\\Scripts\\kaggle.exe\\__main__.py\", line 6, in <module>\n",
+            "  File \"d:\\Projects\\milestone-project-heritage-housing-issues\\.venv\\Lib\\site-packages\\kaggle\\cli.py\", line 68, in main\n",
             "    out = args.func(**command_args)\n",
             "          ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/home/cistudent/.local/lib/python3.12/site-packages/kaggle/api/kaggle_api_extended.py\", line 1741, in dataset_download_cli\n",
+            "  File \"d:\\Projects\\milestone-project-heritage-housing-issues\\.venv\\Lib\\site-packages\\kaggle\\api\\kaggle_api_extended.py\", line 1741, in dataset_download_cli\n",
             "    with self.build_kaggle_client() as kaggle:\n",
             "         ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/home/cistudent/.local/lib/python3.12/site-packages/kaggle/api/kaggle_api_extended.py\", line 688, in build_kaggle_client\n",
+            "  File \"d:\\Projects\\milestone-project-heritage-housing-issues\\.venv\\Lib\\site-packages\\kaggle\\api\\kaggle_api_extended.py\", line 688, in build_kaggle_client\n",
             "    username=self.config_values['username'],\n",
             "             ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^\n",
             "KeyError: 'username'\n"
@@ -287,16 +311,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
+          "name": "stderr",
           "output_type": "stream",
           "text": [
-            "unzip:  cannot find or open inputs/datasets/raw/*.zip, inputs/datasets/raw/*.zip.zip or inputs/datasets/raw/*.zip.ZIP.\n",
-            "\n",
-            "No zipfiles found.\n"
+            "'unzip' is not recognized as an internal or external command,\n",
+            "operable program or batch file.\n"
           ]
         }
       ],
@@ -315,14 +338,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
+          "name": "stderr",
           "output_type": "stream",
           "text": [
-            "mv: cannot stat 'inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/*.csv': No such file or directory\n"
+            "'mv' is not recognized as an internal or external command,\n",
+            "operable program or batch file.\n"
           ]
         }
       ],
@@ -361,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -566,7 +590,7 @@
               "[5 rows x 24 columns]"
             ]
           },
-          "execution_count": 39,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -590,7 +614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -646,7 +670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -679,7 +703,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 41,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -698,7 +722,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -799,7 +823,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "3.12.1",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -813,7 +837,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.1"
+      "version": "3.12.6"
     },
     "orig_nbformat": 2
   },
